target/BKOOLParser.py
# type: ignore
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'int'", "'float'", "'string'", 
                     "'void'", "'if'", "'else'", "'then'", "'for'", "'to_block'",
                     "'downto'", "'do'", "'break'", "'continue'", "'class'", 
                     "'extends'", "'final'", "'static'", "'this'", "'return'", 
                     "'new'", "'nil'", "'+'", "'-'", "'*'", "'/'", "'\\'", 
                     "'%'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'||'", "'&&'", "'!'", "'^'", "':='", "'='", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "':'", "'.'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "BOOL", "INT", "FLOAT", "STRING", "VOID", 
                      "IF", "ELSE", "THEN", "FOR", "TO", "DOWNTO", "DO", 
                      "BREAK", "CONTINUE", "CLASS", "EXTENDS", "FINAL", 
                      "STATIC", "THIS", "RETURN", "NEW", "NIL", "ADD_OP", 
                      "SUB_OP", "MUL_OP", "FLOAT_DIV_OP", "INT_DIV_OP", 
                      "MOD_OP", "NEQ_OP", "EQ_OP", "LT_OP", "GT_OP", "LEQ_OP", 
                      "GEQ_OP", "OR_OP", "AND_OP", "NOT_OP", "CONCAT_OP", 
                      "ASSIGN_OP", "INIT_OP", "LP", "RP", "LSB", "RSB", 
                      "LCB", "RCB", "SEMI", "COLON", "DOT", "COMMA", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "BOOLEAN_LITERAL", "STRING_LITERAL", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ID", "WS", "COMMENT", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_decl = 1
    RULE_class_body = 2
    RULE_class_body_decl = 3
    RULE_field_decl = 4
    RULE_const_field_decl = 5
    RULE_static_field_decl = 6
    RULE_static_constant_decl = 7
    RULE_var_decl_list = 8
    RULE_var_decl_unit = 9
    RULE_const_decl_list = 10
    RULE_const_decl_unit = 11
    RULE_method_decl = 12
    RULE_param_list = 13
    RULE_params = 14
    RULE_id_list = 15
    RULE_constructor_decl = 16
    RULE_bkooltype = 17
    RULE_array_type = 18
    RULE_primitive_type = 19
    RULE_stmt = 20
    RULE_block_stmt = 21
    RULE_local_decl_region = 22
    RULE_stmts = 23
    RULE_local_decl = 24
    RULE_local_var_decl = 25
    RULE_local_const_decl = 26
    RULE_assign_stmt = 27
    RULE_lhs = 28
    RULE_lhs_base = 29
    RULE_lhs_index_expr = 30
    RULE_lhs_member_access_expr = 31
    RULE_if_then_stmt = 32
    RULE_if_then_else_stmt = 33
    RULE_if_then_else_stmt_no_short_if = 34
    RULE_stmt_no_short_if = 35
    RULE_stmt_no_trailing_substmt = 36
    RULE_for_stmt = 37
    RULE_for_stmt_no_short_if = 38
    RULE_break_stmt = 39
    RULE_continue_stmt = 40
    RULE_return_stmt = 41
    RULE_method_invoke_stmt = 42
    RULE_expr = 43
    RULE_relational_expr = 44
    RULE_equality_expr = 45
    RULE_logical_expr = 46
    RULE_additive_expr = 47
    RULE_multiply_expr = 48
    RULE_concat_expr = 49
    RULE_negate_expr = 50
    RULE_unary_arithmetic_expr = 51
    RULE_index_expr = 52
    RULE_member_access_expr = 53
    RULE_method_call = 54
    RULE_new_expr = 55
    RULE_primary_expr = 56
    RULE_expr_list = 57
    RULE_literal = 58
    RULE_array_literal = 59

    ruleNames =  [ "program", "class_decl", "class_body", "class_body_decl", 
                   "field_decl", "const_field_decl", "static_field_decl", 
                   "static_constant_decl", "var_decl_list", "var_decl_unit", 
                   "const_decl_list", "const_decl_unit", "method_decl", 
                   "param_list", "params", "id_list", "constructor_decl", 
                   "bkooltype", "array_type", "primitive_type", "stmt", 
                   "block_stmt", "local_decl_region", "stmts", "local_decl", 
                   "local_var_decl", "local_const_decl", "assign_stmt", 
                   "lhs", "lhs_base", "lhs_index_expr", "lhs_member_access_expr", 
                   "if_then_stmt", "if_then_else_stmt", "if_then_else_stmt_no_short_if", 
                   "stmt_no_short_if", "stmt_no_trailing_substmt", "for_stmt", 
                   "for_stmt_no_short_if", "break_stmt", "continue_stmt", 
                   "return_stmt", "method_invoke_stmt", "expr", "relational_expr", 
                   "equality_expr", "logical_expr", "additive_expr", "multiply_expr", 
                   "concat_expr", "negate_expr", "unary_arithmetic_expr", 
                   "index_expr", "member_access_expr", "method_call", "new_expr", 
                   "primary_expr", "expr_list", "literal", "array_literal" ]

    EOF = Token.EOF
    BOOL=1
    INT=2
    FLOAT=3
    STRING=4
    VOID=5
    IF=6
    ELSE=7
    THEN=8
    FOR=9
    TO=10
    DOWNTO=11
    DO=12
    BREAK=13
    CONTINUE=14
    CLASS=15
    EXTENDS=16
    FINAL=17
    STATIC=18
    THIS=19
    RETURN=20
    NEW=21
    NIL=22
    ADD_OP=23
    SUB_OP=24
    MUL_OP=25
    FLOAT_DIV_OP=26
    INT_DIV_OP=27
    MOD_OP=28
    NEQ_OP=29
    EQ_OP=30
    LT_OP=31
    GT_OP=32
    LEQ_OP=33
    GEQ_OP=34
    OR_OP=35
    AND_OP=36
    NOT_OP=37
    CONCAT_OP=38
    ASSIGN_OP=39
    INIT_OP=40
    LP=41
    RP=42
    LSB=43
    RSB=44
    LCB=45
    RCB=46
    SEMI=47
    COLON=48
    DOT=49
    COMMA=50
    INTEGER_LITERAL=51
    FLOAT_LITERAL=52
    BOOLEAN_LITERAL=53
    STRING_LITERAL=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ID=57
    WS=58
    COMMENT=59
    BLOCK_COMMENT=60
    LINE_COMMENT=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Class_declContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Class_declContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.CLASS:
                self.state = 120
                self.class_decl()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def class_body(self):
            return self.getTypedRuleContext(BKOOLParser.Class_bodyContext,0)


        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = BKOOLParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BKOOLParser.CLASS)
            self.state = 129
            self.match(BKOOLParser.ID)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 130
                self.match(BKOOLParser.EXTENDS)
                self.state = 131
                self.match(BKOOLParser.ID)


            self.state = 134
            self.class_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKOOLParser.LCB, 0)

        def RCB(self):
            return self.getToken(BKOOLParser.RCB, 0)

        def class_body_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Class_body_declContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Class_body_declContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body" ):
                return visitor.visitClass_body(self)
            else:
                return visitor.visitChildren(self)




    def class_body(self):

        localctx = BKOOLParser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(BKOOLParser.LCB)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOL) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 137
                self.class_body_decl()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self.match(BKOOLParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_body_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructor_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Constructor_declContext,0)


        def field_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Field_declContext,0)


        def static_field_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Static_field_declContext,0)


        def const_field_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Const_field_declContext,0)


        def static_constant_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Static_constant_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Method_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_body_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body_decl" ):
                return visitor.visitClass_body_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_body_decl(self):

        localctx = BKOOLParser.Class_body_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_body_decl)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.constructor_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.field_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.static_field_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.const_field_decl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.static_constant_decl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.method_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bkooltype(self):
            return self.getTypedRuleContext(BKOOLParser.BkooltypeContext,0)


        def var_decl_list(self):
            return self.getTypedRuleContext(BKOOLParser.Var_decl_listContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_field_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_decl" ):
                return visitor.visitField_decl(self)
            else:
                return visitor.visitChildren(self)




    def field_decl(self):

        localctx = BKOOLParser.Field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_field_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.bkooltype()
            self.state = 154
            self.var_decl_list()
            self.state = 155
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_field_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def bkooltype(self):
            return self.getTypedRuleContext(BKOOLParser.BkooltypeContext,0)


        def const_decl_list(self):
            return self.getTypedRuleContext(BKOOLParser.Const_decl_listContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_const_field_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_field_decl" ):
                return visitor.visitConst_field_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_field_decl(self):

        localctx = BKOOLParser.Const_field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const_field_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(BKOOLParser.FINAL)
            self.state = 158
            self.bkooltype()
            self.state = 159
            self.const_decl_list()
            self.state = 160
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Static_field_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def bkooltype(self):
            return self.getTypedRuleContext(BKOOLParser.BkooltypeContext,0)


        def var_decl_list(self):
            return self.getTypedRuleContext(BKOOLParser.Var_decl_listContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_static_field_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatic_field_decl" ):
                return visitor.visitStatic_field_decl(self)
            else:
                return visitor.visitChildren(self)




    def static_field_decl(self):

        localctx = BKOOLParser.Static_field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_static_field_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(BKOOLParser.STATIC)
            self.state = 163
            self.bkooltype()
            self.state = 164
            self.var_decl_list()
            self.state = 165
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Static_constant_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def bkooltype(self):
            return self.getTypedRuleContext(BKOOLParser.BkooltypeContext,0)


        def const_decl_list(self):
            return self.getTypedRuleContext(BKOOLParser.Const_decl_listContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_static_constant_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatic_constant_decl" ):
                return visitor.visitStatic_constant_decl(self)
            else:
                return visitor.visitChildren(self)




    def static_constant_decl(self):

        localctx = BKOOLParser.Static_constant_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_static_constant_decl)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.STATIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(BKOOLParser.STATIC)
                self.state = 168
                self.match(BKOOLParser.FINAL)
                self.state = 169
                self.bkooltype()
                self.state = 170
                self.const_decl_list()
                self.state = 171
                self.match(BKOOLParser.SEMI)
                pass
            elif token in [BKOOLParser.FINAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(BKOOLParser.FINAL)
                self.state = 174
                self.match(BKOOLParser.STATIC)
                self.state = 175
                self.bkooltype()
                self.state = 176
                self.const_decl_list()
                self.state = 177
                self.match(BKOOLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_unit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Var_decl_unitContext)
            else:
